MultiRom Kexec HardBoot Patch (May Not Work) Had to Fix arch/arm/boot/compressed/head.S By Hand. 	modified:   arch/arm/Kconfig 	modified:   arch/arm/boot/compressed/head.S 	modified:   arch/arm/configs/d851_defconfig 	modified:   arch/arm/include/asm/kexec.h 	modified:   arch/arm/kernel/machine_kexec.c 	modified:   arch/arm/kernel/relocate_kernel.S 	modified:   arch/arm/mach-msm/include/mach/memory.h 	modified:   arch/arm/mach-msm/lge/devices_lge.c 	modified:   arch/arm/mach-msm/restart.c 	modified:   include/linux/kexec.h 	modified:   kernel/kexec.c 	new file:   patch
Conflicts:
	arch/arm/Kconfig
	arch/arm/mach-msm/include/mach/memory.h

--- a/arch/arm/configs/d851_defconfig
+++ b/arch/arm/configs/d851_defconfig
@@ -3897,3 +3897,16 @@ CONFIG_NLATTR=y
 # CONFIG_AVERAGE is not set
 # CONFIG_CORDIC is not set
 CONFIG_QMI_ENCDEC=y
+
+# MultiROM Support
+# Edited By: Eliminater74
+
+##CONFIG_IKCONFIG=y
+##CONFIG_IKCONFIG_PROC=y
+##CONFIG_SIMPLE_GPU_ALGORITHM=y
+##CONFIG_DYNAMIC_FSYNC=y
+##CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
+CONFIG_ATAGS_PROC=n
+CONFIG_PROC_DEVICETREE=y
