--- a/arch/arm/configs/d851_defconfig
+++ b/arch/arm/configs/d851_defconfig
@@ -1,7 +1,7 @@
 #
 # 777 Kernel
 #
-CONFIG_LOCALVERSION="-AOSP-777-Kernel"
+CONFIG_LOCALVERSION="-PacZilla-777-MR-Patched-Kernel"
 
 # TCP Options
 CONFIG_TCP_CONG_ADVANCED=y
